@@ -1,8 +1,11 @@
 package com.cjw.reactivecommunityproject.server.cache.custom.service.impl;
 
 import com.cjw.reactivecommunityproject.common.spring.config.properties.RcProperties;
+import com.cjw.reactivecommunityproject.common.spring.model.entity.CommonEnabledEnum;
 import com.cjw.reactivecommunityproject.server.cache.custom.model.CacheCustomEnvCodeVO;
 import com.cjw.reactivecommunityproject.server.cache.custom.model.CacheCustomLanguageVO;
+import com.cjw.reactivecommunityproject.server.cache.custom.model.CacheCustomRoleFunctionVO;
+import com.cjw.reactivecommunityproject.server.cache.custom.model.CacheCustomRoleResourceVO;
 import com.cjw.reactivecommunityproject.server.cache.custom.service.CacheCustomService;
 import com.cjw.reactivecommunityproject.server.cache.data.service.CacheDataService;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +18,8 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -25,7 +30,7 @@ public class CacheCustomServiceImpl implements CacheCustomService {
 
     @Override
     @Cacheable(value = "rc_common_env_code", key = "'path=' + #path + '_' + 'code=' + #code", cacheManager = "redisCacheManager")
-    public CacheCustomEnvCodeVO getCommonCustomEnvCode(String path, String code) {
+    public CacheCustomEnvCodeVO getCustomCommonEnvCode(String path, String code) {
         return CollectionUtils.emptyIfNull(cacheDataService.getCacheCommonEnvCodeList())
                 .stream()
                 .filter(o -> StringUtils.equals(o.getPath(), path) && StringUtils.equals(o.getCode(), code))
@@ -43,13 +48,13 @@ public class CacheCustomServiceImpl implements CacheCustomService {
 
     @Override
     @CacheEvict(value = "rc_common_env_code", allEntries = true, cacheManager = "redisCacheManager")
-    public void clearCommonCustomEnvCode() {
+    public void clearCustomCommonEnvCode() {
         log.info("CacheCustomServiceImpl.clearCommonCustomEnvCode()");
     }
 
     @Override
     @Cacheable(value = "rc_common_env_code", key = "'category=' + #category", cacheManager = "redisCacheManager")
-    public List<CacheCustomEnvCodeVO> getCommonCustomEnvCodeByCategoryList(String category) {
+    public List<CacheCustomEnvCodeVO> getCustomCommonEnvCodeByCategoryList(String category) {
         return CollectionUtils.emptyIfNull(cacheDataService.getCacheCommonEnvCodeList())
                 .stream()
                 .filter(o -> StringUtils.equals(o.getCategory(), category))
@@ -62,18 +67,18 @@ public class CacheCustomServiceImpl implements CacheCustomService {
                         .updatedUtcAt(o.getUpdatedUtcAt())
                         .build())
                 .sorted(Comparator.comparing(CacheCustomEnvCodeVO::getOrder, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     @CacheEvict(value = "rc_common_env_code", allEntries = true, cacheManager = "redisCacheManager")
-    public void clearCommonCustomEnvCodeByCategoryList() {
+    public void clearCustomCommonEnvCodeByCategoryList() {
         log.info("CacheCustomServiceImpl.clearCommonCustomEnvCodeByCategoryList()");
     }
 
     @Override
     @Cacheable(value = "custom_common_language", key = "'path=' + #path + '_' + 'lang=' + #lang", cacheManager = "redisCacheManager")
-    public List<CacheCustomLanguageVO> getCommonCustomLangaugeList(String path, String lang) {
+    public List<CacheCustomLanguageVO> getCustomCommonLangaugeList(String path, String lang) {
         var gbCodeList = cacheDataService.getCacheCommonLanguageGbCodeList(lang);
 
         return CollectionUtils.emptyIfNull(cacheDataService.getCacheCommonLanguageCodeList())
@@ -93,12 +98,75 @@ public class CacheCustomServiceImpl implements CacheCustomService {
                             .updatedUtcAt(gbCode != null ? gbCode.getUpdatedUtcAt() : o.getUpdatedUtcAt())
                             .build();
                 })
-                .toList();
+                .collect(Collectors.toList());
+
     }
 
     @Override
     @CacheEvict(value = "custom_common_language", allEntries = true, cacheManager = "redisCacheManager")
-    public void clearCommonCustomLanguageList() {
+    public void clearCustomCommonLanguageList() {
         log.info("CacheCustomServiceImpl.clearCommonCustomLanguageList()");
+    }
+
+    @Override
+    @Cacheable(value = "custom_manage_role_function", key = "'path=' + #roleUid", cacheManager = "redisCacheManager")
+    public List<CacheCustomRoleFunctionVO> getCustomManageRoleFunctionList(Integer roleUid) {
+        var functionList = cacheDataService.getCacheManageFunctionList();
+        return cacheDataService.getCacheManageRoleFunctionList()
+                .parallelStream()
+                .filter(roleFunction -> Objects.equals(roleFunction.getRoleUid(), roleUid))
+                .filter(roleFunction -> roleFunction.getEnabled() == CommonEnabledEnum.Y)
+                .flatMap(roleFunction -> CollectionUtils.emptyIfNull(functionList)
+                        .parallelStream()
+                        .filter(function -> Objects.equals(roleFunction.getFunctionUid(), function.getUid()))
+                        .filter(function -> function.getEnabled() == CommonEnabledEnum.Y)
+                        .map(function -> CacheCustomRoleFunctionVO.builder()
+                                .roleUid(roleFunction.getRoleUid())
+                                .functionUid(function.getUid())
+                                .enabled(roleFunction.getEnabled())
+                                .name(function.getName())
+                                .type(function.getType())
+                                .updatedUtcAt(roleFunction.getUpdatedUtcAt())
+                                .build()
+                        )
+                )
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @CacheEvict(value = "custom_manage_role_function", allEntries = true, cacheManager = "redisCacheManager")
+    public void clearCustomManageRoleFunctionList() {
+        log.info("CacheCustomServiceImpl.clearCustomManageRoleFunctionList()");
+    }
+
+    @Override
+    @Cacheable(value = "custom_manage_role_resource", key = "'path=' + #roleUid", cacheManager = "redisCacheManager")
+    public List<CacheCustomRoleResourceVO> getCustomManageRoleResourceList(Integer roleUid) {
+        var functionList = cacheDataService.getCacheManageResourceList();
+        return cacheDataService.getCacheManageRoleResourceList()
+                .parallelStream()
+                .filter(roleFunction -> Objects.equals(roleFunction.getRoleUid(), roleUid))
+                .filter(roleFunction -> roleFunction.getEnabled() == CommonEnabledEnum.Y)
+                .flatMap(roleFunction -> CollectionUtils.emptyIfNull(functionList)
+                        .parallelStream()
+                        .filter(resource -> Objects.equals(roleFunction.getResourceUid(), resource.getUid()))
+                        .filter(resource -> resource.getEnabled() == CommonEnabledEnum.Y)
+                        .map(resource -> CacheCustomRoleResourceVO.builder()
+                                .roleUid(roleFunction.getRoleUid())
+                                .resourceUid(resource.getUid())
+                                .method(resource.getMethod())
+                                .urlPattern(resource.getUrlPattern())
+                                .enabled(roleFunction.getEnabled())
+                                .updatedUtcAt(roleFunction.getUpdatedUtcAt())
+                                .build()
+                        )
+                )
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @CacheEvict(value = "custom_manage_role_resource", allEntries = true, cacheManager = "redisCacheManager")
+    public void clearCustomManageRoleResourceList() {
+        log.info("CacheCustomServiceImpl.clearCustomManageRoleResourceList()");
     }
 }
